add class of event

--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div id="root"></div>
     <div class="deimian"></div>
 
 
-    <ul id="listaNumeros"><li>uno</li><li>dos</li><li>tres</li></ul>
+    <ul id="listaNumeros">
+        <li>uno</li>
+        <li>dos</li>
+        <li>tres</li>
+    </ul>
+
+    <!--Manera número 1 de integrar javascript  -->
+    <!-- <button onclick="saludar()">Saludar</button> -->
+    
+    <!--Manera número 2 de integrar javascrip, desde app.js (archivo de sacript)  -->
+    <button id="btnSaludar">Saludar</button>
 
     <script src="./app.js"></script>
 </body>
+
 </html>
