Add burble and removeEventLisener

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <!--Manera número 2 de integrar javascrip, desde app.js (archivo de sacript)  -->
     <button id="btnSaludar">Saludar</button>
 
+    <button id="btnClick"> Click me</button>
+
     <script src="./app.js"></script>
 </body>
 
